photo-and-href-added

--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
-<h1>Gabriel Henrique Castelo Costa</h1>
-<p>Estudante de Engenharia de Software</p>
-<p>
-    E-mail: gabflubr@outlook.com<br />
-    Github:<br />
-    Linkedin:
-</p>
-<h2>Formação acadêmica</h2>
-<ul>
-    <li>Graduação em Engenharia de Software (2022-Atual).</li>
-</ul>
-<h2>Experiência profissional</h2>
-<ul>
-    <li>Trainee na EngNet Consultoria</li>
-</ul>
-<h2>Competências chaves</h2>
-<ul>
-    <li>Python</li>
-    <li>C language</li>
-    <li>Java</li>
-    <li>Linux</li>
-</ul>
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Curriculo</title>
+  </head>
+  
+  <body>
+    <h1>Gabriel Henrique Castelo Costa</h1>
+    <img src="./Foto Currículo.jpg" />
+
+    <p>Estudante de Engenharia de Software</p>
+    <p>
+      E-mail: <a href="mailto:gabflubr@outlook.com">gabflubr@outlook.com</a>
+      <br />
+      Github:
+      <a href="https://github.com/GabrielCastelo-31">GabrielCastelo-31</a>
+      <br />
+      LinkedIn:<a href="https://www.linkedin.com/in/gabriel-castelo/"
+        >gabriel-castelo</a
+      >
+    </p>
+
+    <h2>Formação acadêmica</h2>
+    <ul>
+      <li>Graduação em Engenharia de Software (2022-Atual).</li>
+    </ul>
+    <h2>Experiência profissional</h2>
+    <ul>
+      <li>Trainee na EngNet Consultoria</li>
+    </ul>
+    <h2>Competências chaves</h2>
+    <ul>
+      <li>Python</li>
+      <li>C language</li>
+      <li>Java</li>
+      <li>Linux</li>
+    </ul>
+  </body>
+  <html />
+</html>
